syntax = "proto3";

package comm.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/kongken/monkey/pkg/proto/comm/v1;commv1";

message Repo {
  string id = 1;
  string name = 2;
  string full_name = 3;
  string owner = 4;
  string description = 5;
  string url = 6;
  string clone_url = 7;
  string ssh_url = 8;
  string default_branch = 9;
  bool is_private = 10;
  bool is_fork = 11;
  int32 stars_count = 12;
  int32 forks_count = 13;
  int32 watchers_count = 14;
  int32 open_issues_count = 15;
  google.protobuf.Timestamp created_at = 16;
  google.protobuf.Timestamp updated_at = 17;
  google.protobuf.Timestamp pushed_at = 18;
}

message CreateRepoRequest {
  Repo repo = 1;
}

message CreateRepoResponse {
  Repo repo = 1;
}

message GetRepoRequest {
  string id = 1;
}

message GetRepoResponse {
  Repo repo = 1;
}

message UpdateRepoRequest {
  Repo repo = 1;
}

message UpdateRepoResponse {
  Repo repo = 1;
}

message DeleteRepoRequest {
  string id = 1;
}

message DeleteRepoResponse {
  bool success = 1;
}

message ListReposRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListReposResponse {
  repeated Repo repos = 1;
  int32 total = 2;
}

service RepoService {
  rpc CreateRepo(CreateRepoRequest) returns (CreateRepoResponse);
  rpc GetRepo(GetRepoRequest) returns (GetRepoResponse);
  rpc UpdateRepo(UpdateRepoRequest) returns (UpdateRepoResponse);
  rpc DeleteRepo(DeleteRepoRequest) returns (DeleteRepoResponse);
  rpc ListRepos(ListReposRequest) returns (ListReposResponse);
}
